-Added option to set constant color in grayscale mode.
-Fix: wrong image ratio in Windows Terminal