@@ -15,6 +15,7 @@ typedef struct
 	int isOperation;
 } Option;
 
+static void checkSettings(void);
 static int opHelp(int argc, char** argv);
 static int opInput(int argc, char** argv);
 static int opColors(int argc, char** argv);
@@ -28,6 +29,7 @@ static int opInterlaced(int argc, char** argv);
 static int opCharset(int argc, char** argv);
 static int opSetColor(int argc, char** argv);
 static int opFontRatio(int argc, char** argv);
+static int opSingleChar(int argc, char** argv);
 static int opDisableCLS(int argc, char** argv);
 static int opDisableKeys(int argc, char** argv);
 static int opEnableInput(int argc, char** argv);
@@ -49,6 +51,7 @@ const Option OPTIONS[] = {
 	{"-cs","--charset",&opCharset,0},
 	{"-sc","--set-color",&opSetColor,0},
 	{"-fr","--font-ratio",&opFontRatio,0},
+	{"-sch","--single-char",&opSingleChar,0},
 	{"-dcls","--disable-cls",&opDisableCLS,0},
 	{"-dk","--disable-keys",&opDisableKeys,0},
 	{"-ei","--enable-input",&opEnableInput,0},
@@ -154,6 +157,47 @@ long long argumentParser(int argc, char** argv, int* exitReq, int inputNumBase)
 	free(usedOptions);
 
 	return inputVal;
+}
+
+static void checkSettings(void)
+{
+	if (colorMode == CM_WINAPI_GRAY ||
+		colorMode == CM_WINAPI_16)
+	{
+		#ifndef _WIN32
+		error("WinAPI color mode not supported on Linux!", "argParser.c", __LINE__);
+		#endif
+	}
+	if (setColorMode == SCM_WINAPI)
+	{
+		#ifndef _WIN32
+		error("WinAPI \"set color\" mode not supported on Linux!", "argParser.c", __LINE__);
+		#endif
+	}
+	if (setColorMode == SCM_WINAPI &&
+		colorMode != CM_WINAPI_GRAY &&
+		colorMode != CM_CSTD_GRAY)
+	{
+		error("\"Set color\" works only with grayscale color mode!", "argParser.c", __LINE__);
+	}
+	if (setColorMode == SCM_WINAPI &&
+		colorMode != CM_WINAPI_GRAY &&
+		colorMode != CM_CSTD_GRAY)
+	{
+		error("WinAPI \"set color\" mode mode works only with grayscale color mode!", "argParser.c", __LINE__);
+	}
+	if ((setColorMode == SCM_CSTD_256 ||
+		setColorMode == SCM_CSTD_RGB) &&
+		colorMode != CM_CSTD_GRAY)
+	{
+		error("C std \"set color\" mode works only with \"cstd-gray\" color mode!", "argParser.c", __LINE__);
+	}
+	if (singleCharMode &&
+		(colorMode == CM_WINAPI_GRAY ||
+			colorMode == CM_CSTD_GRAY))
+	{
+		error("Single character mode requires colors!", "argParser.c", __LINE__);
+	}
 }
 
 static int opInput(int argc, char** argv)
@@ -345,15 +389,43 @@ static int opSetColor(int argc, char** argv)
 		setColorMode = SCM_WINAPI;
 		setColorVal = atoi(argv[0]);
 	}
-	else if (argv[0][0] == '$')
+	else if (argv[0][0] == '@')
 	{
 		setColorMode = SCM_CSTD_256;
 		setColorVal = atoi(argv[0] + 1);
+		if (setColorVal < 0 || setColorVal > 255)
+		{
+			error("Invalid color!", "argParser.c", __LINE__);
+		}
+
+		if (argc > 1 && argv[1][0] != '-')
+		{
+			setColorVal2 = atoi(argv[1]);
+			if (setColorVal2 < 0 || setColorVal2 > 255)
+			{
+				error("Invalid color!", "argParser.c", __LINE__);
+			}
+			return 2;
+		}
 	}
 	else if (argv[0][0] == '#')
 	{
 		setColorMode = SCM_CSTD_RGB;
 		setColorVal = strtol(argv[0] + 1, NULL, 16);
+		if (setColorVal < 0 || setColorVal > 0xFFFFFF)
+		{
+			error("Invalid color!", "argParser.c", __LINE__);
+		}
+
+		if (argc > 1 && argv[1][0] != '-')
+		{
+			setColorVal2 = strtol(argv[1], NULL, 16);
+			if (setColorVal2 < 0 || setColorVal2 > 0xFFFFFF)
+			{
+				error("Invalid color!", "argParser.c", __LINE__);
+			}
+			return 2;
+		}
 	}
 	else
 	{
@@ -369,6 +441,12 @@ static int opFontRatio(int argc, char** argv)
 	constFontRatio = atof(argv[0]);
 	if (constFontRatio <= 0.0) { error("Invalid font ratio!", "argParser.c", __LINE__); }
 	return 1;
+}
+
+static int opSingleChar(int argc, char** argv)
+{
+	singleCharMode = 1;
+	return 0;
 }
 
 static int opDisableCLS(int argc, char** argv)
