@@ -108,12 +108,18 @@ static void helpAdvancedOptions(void)
 		"                      win2con -ch my_charset.txt\n"
 		" -sc [value]         Sets constant color in grayscale mode.\n"
 		"  (--set-color)      Only number - sets text attribute using WinAPI.\n"
-		"                     \"$color\" - sets color from ANSI 256 palette (only cstd-gray).\n"
+		"                     \"@color\" - sets color from ANSI 256 palette (only cstd-gray).\n"
 		"                     \"#RRGGBB\" - sets RGB color (only cstd-gray).\n"
+		"                     With \"@\" or \"#\" you can give second argument as background color.\n"
 		"                     Examples:\n"
 		"                      win2con -c cstd-gray -sc 4\n"
-		"                      win2con -c cstd-gray -sc $93\n"
+		"                      win2con -c cstd-gray -sc @93\n"
 		"                      win2con -c cstd-gray -sc #FF00FF\n"
+		"                      win2con -c cstd-gray -sc #FF00FF FF0000\n"
+		" -sch                Uses single character to draw image and sets it's color to original,\n"
+		"  (--single-char)    instead of recalculated. Requires colors!\n"
+		"                     Examples:\n"
+		"                      win2con -c cstd-rgb -sch\n"
 		" -fr [ratio]         Sets constant font ratio (x/y).\n"
 		"  (--font-ratio)     By default font ratio is obtained using WinAPI.\n"
 		"                     If it's not posible, it's set to 8/18 (about 0.44).\n"
